k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway-service
  template:
    metadata:
      labels:
        app: gateway-service
    spec:
      serviceAccountName: gateway-sa
      containers:
        - name: gateway-service
          image: ghcr.io/nhnacademy-aiot3-yes-ai-do/gateway-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
